# optiseed

./: AGENTS.md  README.md  main.py  pyproject.toml
examples/: __init__.py  gfp_demo.py  lhs_demo.py  sobol_demo.py
src/optiseed/: __init__.py
src/optiseed/gui/: __init__.py  app.py  cli.py
src/optiseed/strategies/: __init__.py  gfp.py  greedy.py  lhs.py  sobol.py
