[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optiseed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
gui = [
    "streamlit",
    "pandas",
    "plotly",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optiseed"]
